fix: melhoria na detecção do device id
